--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             Keep at least 2 feet distance from the camera, so that your wrists are detected quickly</span>
           </h3>
         <br><br>
-      <button class="song_name_button btn btn-primary">Song name</button> 
+      <button id="songName_btn" class="btn btn-primary">Song name</button> 
     </center>
     
     <script src="main.js"></script>
